bindings/csharp/Bison/Native.cs

// MIT License © 2025 Binary Dice Games
/**
 * @file Native.cs
 * @brief Source-generated P/Invoke declarations for the Bison C ABI
 *        (`bison_c.h` + `rmi_c.h`), plus the library-resolution logic that
 *        locates `libbison_abi.{so,dylib,dll}`.
 *
 * This is the internal-only layer; public consumers use `Dynamic` and the
 * `Bdg.Bison.Rmi` types instead of calling into `Native` directly. Every
 * exported `bison_*`/`rmi_*` C function has a matching `partial` method
 * here, generated by `[LibraryImport]` at compile time -- the C# analogue
 * of `bison/_native.py`'s `ctypes.CDLL` + `_setup_signatures()`.
 */

using System.Runtime.InteropServices;

namespace Bdg.Bison;

/// <summary>Mirrors <c>bison_error</c> / <c>rmi_error</c> return codes.</summary>
public enum BisonErrorCode
{
    Ok = 0,
    Null = -1,
    Type = -2,
    NotFound = -3,
    Duplicate = -4,
    Exception = -5,
    Parse = -6,
}

/// <summary>Mirrors <c>rmi_error</c> return codes.</summary>
public enum RmiErrorCode
{
    Ok = 0,
    Null = -1,
    InvalidState = -2,
    Timeout = -3,
    RemoteException = -4,
    Transport = -5,
    Exception = -6,
}

/// <summary>Mirrors <c>bison_attributes</c>.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeAttributes
{
    public nint DisplayName; // char* (UTF-8, owned by caller for `in` use)
    public nint Description;
    public nint Category;
    public int Obsolete;
    public nint ObsoleteMessage;
    public int Required;
}

/// <summary>Mirrors <c>bison_print_options</c>.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativePrintOptions
{
    public int Multiline;
    public nint Indent; // char*
}

/// <summary>
/// <c>bison_method_fn</c>: void(*)(bison_handle self, bison_handle params,
/// bison_handle result, void* user).
/// </summary>
[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void NativeMethodFn(nint self, nint parameters, nint result, nint user);

/// <summary><c>rmi_proxy_event_fn</c>: void(*)(bison_handle params, void* user).</summary>
[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void NativeProxyEventFn(nint parameters, nint user);

/// <summary>
/// <c>rmi_auth_fn</c>: bool(*)(bison_handle payload, char* identity_buf,
/// size_t identity_buf_len, void* user).
/// </summary>
[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal unsafe delegate bool NativeAuthFn(nint payload, byte* identityBuf, nuint identityBufLen, nint user);

/// <summary><c>wish_session_fn</c>: void(*)(wish_client_handle client, void* userdata).</summary>
[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void NativeSessionFn(nint client, nint userdata);

internal static partial class Native
{
    private const string LibName = "bison_abi";

    static Native()
    {
        NativeLibrary.SetDllImportResolver(typeof(Native).Assembly, ResolveLibrary);
    }

    /// <summary>
    /// Locates <c>libbison_abi</c> the same way <c>bison/_native.py</c>'s
    /// <c>_find_library()</c> does: an explicit <c>BISON_LIB</c> path first,
    /// then a handful of conventional build-output locations relative to the
    /// repo root, then the OS's normal library search (return
    /// <see cref="nint.Zero"/> to fall back to it).
    /// </summary>
    private static nint ResolveLibrary(string libraryName, System.Reflection.Assembly assembly, DllImportSearchPath? searchPath)
    {
        if (libraryName != LibName)
        {
            return nint.Zero;
        }

        var envPath = Environment.GetEnvironmentVariable("BISON_LIB");
        if (!string.IsNullOrEmpty(envPath) && NativeLibrary.TryLoad(envPath, out var envHandle))
        {
            return envHandle;
        }

        // Layout: <repo>/bindings/csharp/Bison/Native.cs -> <repo>/build/...
        var here = AppContext.BaseDirectory;
        var repoRoot = FindRepoRoot(here);
        if (repoRoot is not null)
        {
            string[] candidates =
            [
                Path.Combine(repoRoot, "build", "libbison_abi.so"),
                Path.Combine(repoRoot, "build", "libbison_abi.dylib"),
                Path.Combine(repoRoot, "build", "Release", "bison_abi.dll"),
                Path.Combine(repoRoot, "build", "Debug", "bison_abi.dll"),
            ];
            foreach (var candidate in candidates)
            {
                if (File.Exists(candidate) && NativeLibrary.TryLoad(candidate, out var handle))
                {
                    return handle;
                }
            }
        }

        // Fall through to the default resolver (system search path / rpath).
        return nint.Zero;
    }

    /// <summary>Walks upward from a build-output directory looking for the
    /// repo root (identified by a top-level <c>bindings</c> directory).</summary>
    private static string? FindRepoRoot(string start)
    {
        var dir = new DirectoryInfo(start);
        while (dir is not null)
        {
            if (Directory.Exists(Path.Combine(dir.FullName, "bindings")) && File.Exists(Path.Combine(dir.FullName, "CMakeLists.txt")))
            {
                return dir.FullName;
            }
            dir = dir.Parent;
        }
        return null;
    }

    // ── bison_c.h: lifecycle ────────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial nint bison_create(uint klassName);

    [LibraryImport(LibName)]
    public static partial nint bison_instantiate(uint nsName, uint klassName);

    [LibraryImport(LibName)]
    public static partial nint bison_add_ref(nint h);

    [LibraryImport(LibName)]
    public static partial void bison_release(nint h);

    [LibraryImport(LibName)]
    public static partial nint bison_clone(nint h);

    // ── Import / export ──────────────────────────────────────────────────────

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint bison_from_json(string json);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint bison_from_yaml(string yaml);

    [LibraryImport(LibName)]
    public static partial int bison_to_json(nint h, int indent, out nint out_);

    [LibraryImport(LibName)]
    public static partial int bison_to_yaml(nint h, out nint out_);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_print(nint h, NativePrintOptions* opts, out nint out_);

    [LibraryImport(LibName)]
    public static partial void bison_free_string(nint s);

    // ── Class registry ──────────────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_class(uint nsName, nint klass, uint parentName, NativeAttributes* meta);

    [LibraryImport(LibName)]
    public static partial nint bison_find_class(uint nsName, uint klassName);

    [LibraryImport(LibName)]
    public static partial void bison_clear_registry();

    [LibraryImport(LibName)]
    public static unsafe partial int bison_get_class_attributes(uint nsName, uint klassName, NativeAttributes* out_);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_get_field_attributes(nint h, uint fieldKey, NativeAttributes* out_);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_get_method_attributes(nint h, uint methodKey, NativeAttributes* out_);

    // ── Scalar setters (named) ───────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial int bison_set_int(nint h, uint name, int value);

    [LibraryImport(LibName)]
    public static partial int bison_set_float(nint h, uint name, float value);

    [LibraryImport(LibName)]
    public static partial int bison_set_bool(nint h, uint name, int value);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial int bison_set_string(nint h, uint name, string value);

    [LibraryImport(LibName)]
    public static partial int bison_set_object(nint h, uint name, nint value);

    [LibraryImport(LibName)]
    public static partial int bison_set_key(nint h, uint name, uint value);

    // ── Scalar setters (indexed) ─────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial int bison_set_int_at(nint h, nuint index, int value);

    [LibraryImport(LibName)]
    public static partial int bison_set_float_at(nint h, nuint index, float value);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial int bison_set_string_at(nint h, nuint index, string value);

    [LibraryImport(LibName)]
    public static partial int bison_set_bool_at(nint h, nuint index, int value);

    [LibraryImport(LibName)]
    public static partial int bison_set_key_at(nint h, nuint index, uint value);

    [LibraryImport(LibName)]
    public static partial int bison_set_object_at(nint h, nuint index, nint value);

    // ── Scalar getters (named) ───────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial int bison_get_int(nint h, uint name, out int out_);

    [LibraryImport(LibName)]
    public static partial int bison_get_float(nint h, uint name, out float out_);

    [LibraryImport(LibName)]
    public static partial int bison_get_bool(nint h, uint name, out int out_);

    [LibraryImport(LibName)]
    public static partial int bison_get_string(nint h, uint name, byte[]? buf, nuint bufLen, out nuint lenOut);

    [LibraryImport(LibName)]
    public static partial int bison_get_object(nint h, uint name, out nint out_);

    [LibraryImport(LibName)]
    public static partial int bison_get_key(nint h, uint name, out uint out_);

    // ── Scalar getters (indexed) ─────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial int bison_get_int_at(nint h, nuint index, out int out_);

    [LibraryImport(LibName)]
    public static partial int bison_get_float_at(nint h, nuint index, out float out_);

    [LibraryImport(LibName)]
    public static partial int bison_get_string_at(nint h, nuint index, byte[]? buf, nuint bufLen, out nuint lenOut);

    [LibraryImport(LibName)]
    public static partial int bison_get_bool_at(nint h, nuint index, out int out_);

    [LibraryImport(LibName)]
    public static partial int bison_get_key_at(nint h, nuint index, out uint out_);

    [LibraryImport(LibName)]
    public static partial int bison_get_object_at(nint h, nuint index, out nint out_);

    [LibraryImport(LibName)]
    public static partial nuint bison_size(nint h);

    // ── Methods ───────────────────────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_method(nint h, uint name, nint fn, nint user, NativeAttributes* meta);

    [LibraryImport(LibName)]
    public static partial int bison_call(nint h, uint name, nint parameters, out nint result);

    // ── Field registration with metadata ─────────────────────────────────────

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_field_int(nint obj, uint key, int value, NativeAttributes* meta);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_field_float(nint obj, uint key, float value, NativeAttributes* meta);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_field_bool(nint obj, uint key, int value, NativeAttributes* meta);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static unsafe partial int bison_add_field_string(nint obj, uint key, string value, NativeAttributes* meta);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_field_key(nint obj, uint key, uint value, NativeAttributes* meta);
